Changes towards version 0.3:
- Mouse cursor is now hidden in fullscreen mode (bug #173) -Mika
- Version checks inside the input code to flag incompatible changes --Michael
- Install location for content on unix systems is now ${prefix}/share/uqm
  instead of ${prefix}/lib/uqm - SvdB
- New main menu graphics from MarkVera, Paxtez, Nic (bug #393)
- Removed a place where you could ask for repairs when you shouldn't 
  (bug #432), from Nic
- Can use F10 to quit during splash screen as well as main menu -Michael
- Fixed starship location when being teleported from Procyon to
  the Earth Starbase after the Precursor bomb is installed. - Svdb
- Crew death on planet is now counted properly in all cases (bug #70) -Mika
- Fixed lockup in 'save failed' alert box (bug #397), from ghakko
- Fixed glitch in Pkunk animation (bug #354), from Paxtez
- Fixed Kohr-Ah final defeat message repeating (bug #426) -Mika
- Fix for picking up talking pet after Umgah genocide - from Paxtez
- MinGW compilation fixes - SvdB+Mika
- Bilinear scaler is now faster, has 24bpp mode and uses regions -Alex
- Accept CRLF line endings in .txt and .ts files - SvdB
- Fixed overflow problem with 32bpp bilinear,biadapt,biadv scalers -Mika
- MixSDL now handles resampling correctly (less cracklings);
  added cubic interpolation for high quality mode -Mika
- Removed the redundant "GameExiting" variable -Michael
- Added quit options to ingame menu (bug #409), from Paxtez
- Fix position of blinking save/load in melee (bug #406), from Paxtez
- New packaging/io system. - SvdB
- Exit confirmation dialog is prettier and safer, from Paxtez
- Exiting from the main menu with F10 now exits the game -Michael
- Changed lander speed to 35 FPS, which matches reported 3DO speed 
  (Bug #22) -Michael
- Added a Menu-Delete key for the Super-Melee menu (#123) -Michael
- Added support for positional (stereo) sound effects, currently
  works only with OpenAL -Mika